# preparing-speech

./: main.py  pyproject.toml
