[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "preparing-speech"
version = "0.1.0"
[tool.poetry.dependencies]
num2words = "^0.5.10"
python = "^3.8"
transliterate = "^1.10"
[tool.poetry.dev-dependencies]
